refactor: harden architecture boundaries, security, and persistence
- Relocate SecurityContextCurrentActor to ed-iam-resource-server, eliminating adapter packages from ed-iam-core
- Add ArchUnit boundary fitness tests and dependency to ed-iam-resource-server
- De-duplicate bean configurations in IamSecurityAutoConfiguration
- Add @Transactional(readOnly = true) and write @Transactional to all 8 repository adapters
- Enrich IamExceptionHandler with RFC 9457 standard type, title, and instance URIs
- Harden JSON string escaping and replace PII email logging with actor ID
- Centralize tenant header extraction in TenantResolutionHelper
- Modernize Stream collection to .toList() and disable open-in-view in playground